--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="option-menu">HOME</div>
         <div class="option-menu">BROWSE</div>
         <div class="option-menu">RADIO</div>
-        <div class="option-menu " id="recent">RECENTLY PLAYED</div>
+        <div class="option-menu " id="recent"><u>RECENTLY PLAYED</u></div>
         <div class="option-menu">FAVOURITE</div>
 
         
@@ -122,43 +122,8 @@
         </div>
     </div>
 
-    <!-- <div class="parentt">
-              <div class="recent-ticket">
-              <img class="recent-img" src="images/download.jpg"></img>
-              <div class="recent-song">rockstar</div><br>
-              <div class="recent-artist">Post Malone</div>
-            </div>
-
-            <div class="recent-ticket">
-              <img class="recent-img" src="images/download.jpg"></img>
-              <div class="recent-song">rockstar</div>
-              <div class="recent-artist">Post Malone</div>
-            </div>
-
-            <div class="recent-ticket">
-              <img class="recent-img" src="images/download.jpg"></img>
-              <div class="recent-song">rockstar</div>
-              <div class="recent-artist">Post Malone</div>
-            </div>
-
-            <div class="recent-ticket">
-              <img class="recent-img" src="images/download.jpg"></img>
-              <div class="recent-song">rockstar</div>
-              <div class="recent-artist">Post Malone</div>
-            </div>
-
-            <div class="recent-ticket">
-              <img class="recent-img" src="images/download.jpg"></img>
-              <div class="recent-song">rockstar</div>
-              <div class="recent-artist">Post Malone</div>
-            </div>
-
-    </div> -->
-
+   
     
-
-
-
 
 
     <script src="./perfect-scrollbar/dist/perfect-scrollbar.js"></script>
